objects/Consultant__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <description>Returns a true vale if today's date is within the pay rate term.</description>
        <formula>Term__r.hed__Start_Date__c  &lt;=   TODAY()  &amp;&amp;  Term__r.hed__End_Date__c   &gt;=  TODAY() &amp;&amp;  OR(Termination_Date__c &gt; TODAY(),ISNULL(Termination_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Appointments_completed_in_Learning_Ctr__c</fullName>
        <label>Subject Tutoring Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.LWC_Account_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consultant Terms</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <description>USF Email</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Hire_Date__c</fullName>
        <description>Maintained by LWC</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>Maintained by LWC</description>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Prior_Term_Cumulative_GPA__c</fullName>
        <formula>Contact__r.Prior_Term_Cumulative_GPA__c</formula>
        <label>Prior Term Cumulative GPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Peer Tutoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supports Pay Rate Functionality</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Consultant</label><nameField>
        <label>Consultant Record Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Consultants</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Center__c</columns>
        <columns>Term__c</columns>
        <columns>Hire_Date__c</columns>
        <columns>Pay_Rate__c</columns>
        <columns>Appointments_completed_in_Learning_Ctr__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>